# ml-greeks-pricers

./: .gitignore  CHANGELOG.md  LICENSE  README.md  common.py  pyproject.toml  setup_env.py
common/: __init__.py  random_cache.py
examples/: Europeas BS vs Europeas LV.xlsx  american.py  american_surfaces.py  americanas sin dividendos vs europeas sin dividendos.docx  autocall_barrier_option.py  autocall_barrier_option_quantlib.py  cache_demo.py  compare_lsm_tf.py  european.py  european_surfaces.py  lsm_vs_nlsm_tf_only.txt  nn_european.py  nn_model_save.py  quantlib.py  quantlib_american_tree.py  quantlib_european_mc.py
examples/american_surfaces/: dupire_vegas.csv  flat_deltas.csv
examples/basket/: worst_of.py
examples/european_surfaces/: diff_dupire_delta.csv  diff_flat_delta.csv  diff_flat_price.csv  dupire_deltas.csv  dupire_prices.csv
examples/inputs/: __implied_vol_surface.csv  implied_vol_surface.csv  nn_implied_vol_surface.csv
examples/nn/: model.keras  nn_european.py  plot_from_saved.py  scaler.pkl  train_and_save.py
examples/outputs/: dupire_local_vol_american.csv
examples/plots/: utils.py
examples/tf_vs_np/: compare.py  compare_dupire.py
ml_greeks_pricers/: __init__.py
ml_greeks_pricers/common/: __init__.py  constants.py  utils.py
ml_greeks_pricers/nn/: __init__.py  (+4 more)
outputs/: dupire_local_vol.csv
pricers/: american.py  black_utils.py  european.py
tests/: test_american_option.py  test_cache_surface.py  test_european_example.py  test_nn_european_example.py  test_vector_mc_european.py  test_worst_of_option.py
volatility/: discrete.py
(+50 files in other folders)
